# django_training

./: results.md
albums/: models.py
albums/migrations/: 0001_initial.py
artists/: models.py
music_platform/: .gitignore  pyproject.toml
music_platform/albums/: admin.py  forms.py  models.py  urls.py  views.py
music_platform/albums/migrations/: 0002_album_is_approved.py  0003_remove_album_creation_datetime_album_created_and_more.py  0004_alter_album_release_datetime.py  0005_song.py  0006_alter_song_name_alter_song_url.py  0007_alter_song_song_file_alter_song_song_img_and_more.py
music_platform/albums/templates/: errors.html  images.html
music_platform/api/: urls.py  views.py
music_platform/artists/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
music_platform/artists/migrations/: 0001_initial.py  0002_artist_approved_albums.py
music_platform/artists/templates/: allartists.html  errors.html
music_platform/authentication/: forms.py  serializer.py  urls.py  views.py
music_platform/musicplatform/: settings.py  urls.py
music_platform/users/: admin.py  models.py  urls.py  views.py
music_platform/users/migrations/: 0001_initial.py
musicplatform/: settings.py
